k8s/deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: promo-service
  labels:
    app: promo-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: promo-service
  template:
    metadata:
      labels:
        app: promo-service
    spec:
      containers:
        - name: promo-service
          image: your-registry/offer-promo:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8081
