k8s/service.yaml

apiVersion: v1
kind: Service
metadata:
  name: promo-service
spec:
  selector:
    app: promo-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081
  type: ClusterIP
